sass/_postandpages.scss
.entry-content,
.entry-meta,
.nav-next,
.nav-previous,
.page-title,
.social-share {
	padding-left: 1em !important;
	padding-right: 1em !important;
}

.site-content {
	@include mq($from: m) {
		margin-top: 82px;
	}
}

.site-content, 
article {
	background-color: white;
}

.entry-header {
	margin-bottom: -1.5em;
}

.entry-title {
	margin-top: 1.5em;
}

article > .entry-header {
	padding-left: 1em;
}

.edit-link {
	display: none;
}

img.wp-image-25.alignright {
	margin-bottom: 2em;
	padding-left: 1em;
}

.nav-previous {
	padding-bottom: 2em;
}

.wp-post-image {
	float: left;
	padding-top: 0.25em;
	padding-right: 0.5em;
	padding-bottom: 0.5em;
}

.size-thumbnail {
	margin-top: 0.3em;
}


.post {
	&__heading, 
	&__heading a {
		margin-top: 45px;
		margin-bottom: 45px;
		color: $brand-h;
	}

	ul {
		list-style: circle;
	}
}

